5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1715_3032.log
== TEST (2019-05-02 16:03:42) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

#Calculo da funcao:
if(x <= 0):
	print(round(0, 4)
	
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:04:01) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

#Calculo da funcao:
if(x <= 0):
	print(round(0, 4)
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:04:10) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

#Calculo da funcao:
if(x <= 0):
	print(round(0, 4)	
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:04:39) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

#Calculo da funcao:
if(x <= 0):
	print(round(0, 4)
else:
			print(1)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:05:23) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x == 0):
	print(0)
else:
	print(1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:05:37) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(0)
else:
	print(1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:06:04) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
else:
	print(1)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:07:24) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1)
	print(round(1, 4))
-- ERROR:
File "XXXX", line 7
    elif(0 < x <= 1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:07:31) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:08:52) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2)))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:04) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2)))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:49) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2). 4))
-- ERROR:
File "XXXX", line 10
    print(round(x**(1/2). 4))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:57) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2), 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:10:06) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2), 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:11:12) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2), 4))
elif(x > 2):
	print(round(x**(1/3), 2))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:11:30) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2), 4))
elif(x > 2):
	print(round(x**(1/3), 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:11:37) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2), 4))
elif(x > 2):
	print(round(x**(1/3), 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:11:45) 
-- CODE:
from math import *
#Leitura do valor de x
x = float(input("Digite um valor para x: "))

if(x <= 0):
	print(round(0, 4))
elif(0 < x <= 1):
	print(round(1, 4))
elif(1 < x <= 2):
	print(round(x**(1/2), 4))
elif(x > 2):
	print(round(x**(1/3), 4))
-- EXECUTION TIME:
0.145933
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
